--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,7 +1,7 @@
 :root {
   --pink: rgb(255, 102, 196);
   --pinkPastel: rgb(255, 173, 224);
-  --magenta: rgb(203, 108, 230);
+  --magenta: #CB6CE6;
   --magentaPastel: rgb(225, 168, 240);
   --purple: rgb(140, 82, 255);
   --purplePastel: rgb(187, 153, 255);
@@ -38,13 +38,13 @@ h1 {
 h2 {
   font-family: HK Grotesk Light;
   font-size: 2rem;
-  margin-bottom: 0rem;
+  margin-bottom: 0;
 }
 
 h3 {
   font-family: HK Grotesk Med;
   font-size: 2rem;
-  margin-bottom: 0rem;
+  margin-bottom: 0;
 }
 
 p {
@@ -52,14 +52,22 @@ p {
   font-size: 1rem;
 }
 
+#about,
+#experience,
+#projects,
+#involvement {
+  box-sizing: border-box;
+  text-align: left;
+}
+
 .navbar {
-  height: 15%;
-  display: flex;
   align-items: center;
+  background: var(--offwhite);
+  box-sizing: border-box;
+  display: flex;
+  height: 15%;
   padding-left: 8%;
   padding-right: 8%;
-  box-sizing: border-box;
-  background: var(--offwhite);
 }
 
 nav {
@@ -67,17 +75,17 @@ nav {
   text-align: right;
 }
 
-nav ul li {
-  list-style: none;
+nav ul li {  
   display: inline-block;
+  list-style: none;
   margin-left: 60px;
 }
 
 nav ul li a {
-  text-decoration: none;
+  color: var(--black);
   font-family: HK Grotesk Light;
   font-size: 1.5rem;
-  color: var(--black);
+  text-decoration: none;
 }
 
 nav ul li a:hover {
@@ -88,8 +96,8 @@ nav ul li a:hover {
 
 button {
   border-radius: 8px;
-  font-size: 20px;
   font-family: HK Grotesk Light;
+  font-size: 20px;
   transition-duration: 0.3s;
 }
 
@@ -99,16 +107,16 @@ button:hover {
 }
 
 .logo {
-  width: 100px;
   cursor: pointer;
+  width: 100px;
 }
 
 .intro {
-  padding: 8%;
-  box-sizing: border-box;
-  background-image: url(https://cdn.glitch.com/23f6eeca-cb3d-44f2-9608-0379158305f6%2Fwebsite_background.png?v=1614489189113);
+  background-image: url(./images/website_backgrounds.png);
   background-position: right top;
   background-size: cover;
+  box-sizing: border-box;
+  padding: 8%;
   text-align: left;
 }
 
@@ -117,20 +125,29 @@ button:hover {
   margin-right: 7%;
 }
 
+.typed-div {
+  align-items: baseline;
+  display: flex;
+}
+
+.typed-div h1 {
+  margin-top: 0;
+}
+
+#cursor {
+  font-family: HK Grotesk Med;
+  font-size: 3rem;
+}
+
 #about {
-  padding-left: 8%;
-  padding-right: 5%;
-  padding-top: 5%;
-  padding-bottom: 5%;
-  box-sizing: border-box;
   background: var(--magentaPastel);
-  text-align: left;
+  padding: 5% 5% 5% 8%;
 }
 
 #about:after {
   content: "";
-  display: table;
   clear: both;
+  display: table;
 }
 
 .column {
@@ -143,9 +160,9 @@ button:hover {
 }
 
 .about-list ul li {
-  list-style: none;
   font-family: HK Grotesk Med;
   font-size: 1rem;
+  list-style: none;
 }
 
 .about-list ul li span {
@@ -153,11 +170,11 @@ button:hover {
 }
 
 .headshot {
+  border-radius: 8px;
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 70%;
-  border-radius: 8px;
 }
 
 .resume-button {
@@ -166,79 +183,67 @@ button:hover {
 }
 
 #experience {
-  padding: 8%;
-  box-sizing: border-box;
   background: var(--purplePastel);
-  text-align: left;
+  padding: 8%;
 }
 
 #projects {
-  padding-left: 8%;
-  padding-right: 8%;
-  padding-bottom: 8%;
-  padding-top: 3%;
-  box-sizing: border-box;
   background: var(--pinkPastel);
-  text-align: left;
   height: 80rem;
+  padding: 3% 8% 8% 8%;
+}
+
+.column a {
+  color: var(--black);
+  text-decoration: none;
 }
 
 .column h2 {
-  margin-top: 0px;
+  margin-top: 0;
+}
+
+.project-img,
+.project-img-one,
+.project-img-two {
+  border-radius: 8px;
+  display: block;
 }
 
 .project-img {
-  display: block;
-  margin-left: 10%;
-  margin-right: auto;
-  margin-top: 10%;
-  margin-bottom: 10%;
+  margin: 10% auto 10% 10%;
   width: 100%;
-  border-radius: 8px;
 }
 
 .project-img-one {
-  display: block;
-  margin-left: auto;
-  margin-right: 50px;
-  margin-top: 10%;
-  margin-bottom: 10%;
+  margin: 10% 50px 10% auto;
   width: 50%;
-  border-radius: 8px;
 }
 
 .project-img-two {
-  display: block;
-  margin-left: 50px;
-  margin-right: auto;
-  margin-top: 10%;
-  margin-bottom: 10%;
+  margin: 10% auto 10% 50px;
   width: 50%;
-  border-radius: 8px;
 }
 
 #involvement {
-  padding: 8%;
-  box-sizing: border-box;
   background: var(--yellow);
-  text-align: left;
+  padding: 8%;
 }
 
 #contact {
-  padding: 8%;
-  box-sizing: border-box;
   background: var(--offwhite);
+  box-sizing: border-box;
+  padding: 8%;
   text-align: center;
 }
 
 #contact h1 {
-  margin-bottom: 0rem;
+  margin-bottom: 0;
 }
 
 #contact h2 {
   font-size: 1.5rem;
-  margin-top: 1rem;
   margin-bottom: 3rem;
+  margin-top: 1rem;
 }
 
 .social-media {
@@ -246,14 +251,14 @@ button:hover {
 }
 
 .icons {
+  border-radius: 50%;
   color: var(--black);
-  padding: 20px;
   font-size: 3rem;
-  width: 30px;
+  margin: 5px 2px;
+  padding: 20px;
   text-align: center;
   text-decoration: none;
-  margin: 5px 2px;
-  border-radius: 50%;
+  width: 30px;
 }
 
 .icons:hover {
