--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,7 +1,7 @@
 :root {
   --pink: rgb(255, 102, 196);
   --pinkPastel: rgb(255, 173, 224);
-  --magenta: #CB6CE6;
+  --magenta: rgb(203, 108, 230);
   --magentaPastel: rgb(225, 168, 240);
   --purple: rgb(140, 82, 255);
   --purplePastel: rgb(187, 153, 255);
