--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -258,6 +258,11 @@ button:hover {
   margin-bottom: 0;
 }
 
+#contact hr {
+  border: 5px solid var(--magentaPastel);
+  border-radius: 5px;
+}
+
 .contact-h2 {
   margin-bottom: 3rem;
   margin-top: 1rem;
@@ -309,4 +314,14 @@ textarea {
   padding: 20px 20px 0 20px;
   resize: none;
   width: 75%;
+}
+
+#comment-list {
+    padding-top: 2rem;
+}
+
+.comment {
+    font-weight: HK Grotesk Med;
+    font-size: 1rem;
+    text-decoration: none;
 }
